syntax = "proto3";

package pb;

option go_package = "dineflow-order-service/pb";
import "google/protobuf/timestamp.proto";

message Order {
  message OrderMenu {
    string menu_id = 1;
    float price = 2;
    int32 amount = 3;
    string request = 4;
  }
  string id = 1;
  string status = 2;
  string vendor_id = 3;
  repeated OrderMenu order_menus = 4; 
  float price = 5;
  string user_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message OrderResponse { Order order = 1; }
