syntax = "proto3";

package pb;

option go_package = "dineflow-order-service/pb";

message UpdateOrderRequest {
  message OrderMenu {
    string menu_id = 1;
    float price = 2;
    int32 amount = 3;
    string request = 4;
  }
  string id = 1;
  string status = 2;
  string vendor_id = 3;
  repeated OrderMenu order_menus = 4; 
  string user_id = 5;
}
